<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvFiltrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1565C0"
        android:gravity="center"
        android:text="Filtrar"
        android:textColor="#FFFFE0"
        android:textSize="21sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFiltroCompanhia3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|left"
        android:text="Compañía"
        android:textSize="19sp" />

    <Spinner
        android:id="@+id/spnCompanhia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="32dp"
        android:dropDownWidth="wrap_content" />

    <TextView
        android:id="@+id/tvPotencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|left"
        android:text="Potencia"
        android:textSize="19sp" />

    <org.florescu.android.rangeseekbar.RangeSeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:valuesAboveThumbs="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingLeft="140dp" >

        <TextView
            android:id="@+id/tvMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvGuion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tvMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="140dp">

        <Button
            android:id="@+id/btnBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="Buscar" />

        <Button
            android:id="@+id/btnBuscarTodos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_weight="1"
            android:text="Buscar todos"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>