<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuItemInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/info" />
    <item
        android:id="@+id/btnFilters"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/filter"
        android:title="filtersButton"
        app:showAsAction="always" />

    <item
        android:id="@+id/btnOrdenar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:icon="@drawable/sortbyicon"
        android:title="orderButton"
        app:showAsAction="always" />
</menu>