...
        android:layout_marginTop="-5dp"
        android:text="TextView"
        app:layout_constraintStart_toEndOf="@+id/ivLogo"
        app:layout_constraintTop_toTopOf="@+id/ivLogo" />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/tvInfoAddress"
        app:layout_constraintStart_toStartOf="@+id/tvTitle"
...
